Bug 1634153 - Make textarea focus code not unconditionally scroll. r=masayuki

Bug 353539 introduced a ScrollOnFocusEvent to scroll the caret on focus
whenever the form control was focused.

However ScrollOnFocusEvent::Run was forgetting to pass
nsISelectionController::SCROLL_FIRST_ANCESTOR_ONLY, so it was also
scrolling the document, which is pretty unexpected when you use
.focus({ preventScroll: true }) for example.

Use ScrollSelectionIntoView instead, does the right thing and is what
the original bug intended anyhow.

Differential Revision: https://phabricator.services.mozilla.com/D73181